[package]
name        = "polar-bear-arc-forge-defi"
version     = "0.2.0"
edition     = "2024"
rust-version = "1.93.1"
authors     = ["Murtaza Ali Imtiaz <very.kool.king@gmail.com>"]
description = "ARC Forge DeFi platform - Solana token launch with sniper-bot prevention and deep initial liquidity, powered by Rig (ARC) AI agents"
license     = "LicensePBS"
repository  = "https://github.com/murtazaai/polar-bear-arc-forge-defi"
keywords    = ["solana", "defi", "rig-arc", "sniper-bot", "hft"]
categories  = ["cryptography::cryptocurrencies"]
readme      = "README.md"

[[bin]]
name = "polar-bear-arc-forge"
path = "src/main.rs"

[[example]]
name              = "agent_demo"
required-features = ["ai-agent"]

# Docs.rs - build all features, inject the docsrs cfg flag so conditional items
# are visible.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workspace-wide lints - mirrors the rig upstream lint table.
[lints.rust]
unused       = "warn"
missing_docs = "warn"

[lints.clippy]
all      = "warn"
pedantic = "warn"
# Allow common false-positive pedantic lints.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"

# ── FEATURES ──────────────────────────────────────────────────────────────────
[features]
default  = []
ai-agent = ["dep:rig-core"]

# ── CORE AI (ARC) - optional ──────────────────────────────────────────────────
[dependencies]
# Rig (ARC) - Rust Inference Gateway / Agentic AI framework (optional;
# gates the AI-agent feature behind `--features ai-agent`).
rig-core = { version = "^0.37", features = ["rustls"], optional = true }

# ── ASYNC RUNTIME ─────────────────────────────────────────────────────────────
tokio = { version = "^1", features = ["full"] }

# ── HTTP CLIENT - Solana JSON-RPC + Raydium v3 REST API ───────────────────────
reqwest = { version = "^0.12", features = ["json", "rustls-tls"], default-features = false }

# ── ENCODING ──────────────────────────────────────────────────────────────────
bs58   = "^0.5"
base64 = { version = "^0.22", features = ["std"] }

# ── SERIALISATION ─────────────────────────────────────────────────────────────
serde      = { version = "^1", features = ["derive"] }
serde_json = "^1"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = "^4", features = ["derive", "env"] }

# ── LOGGING ───────────────────────────────────────────────────────────────────
tracing            = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }

# ── ERROR HANDLING ────────────────────────────────────────────────────────────
anyhow    = "^1"
thiserror = "^2"

# ── TIME / TIMESTAMPS ─────────────────────────────────────────────────────────
chrono = { version = "^0.4", features = ["serde"] }

# ── ENV CONFIG ────────────────────────────────────────────────────────────────
dotenvy = "^0.15"

# ── DEV / TEST ────────────────────────────────────────────────────────────────
[dev-dependencies]
pretty_assertions = "^1"
tokio-test        = "^0.4"

# ── RELEASE PROFILE ───────────────────────────────────────────────────────────
# Mirrors rig's workspace release profile: maximise performance and
# minimise binary size through LTO and single-codegen-unit compilation.
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "debuginfo"
